// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav should match the snapshot for authenticated large screens 1`] = `
<Nav
  localeCode="en-US"
  media={Object {}}
  self={
    Object {
      "name": "Jeff Cleft",
      "status": "active",
    }
  }
/>
`;

exports[`Nav should match the snapshot for authenticated medium screens 1`] = `
<Nav
  localeCode="en-US"
  media={Object {}}
  self={
    Object {
      "name": "Jeff Cleft",
      "status": "active",
    }
  }
/>
`;

exports[`Nav should match the snapshot for unauthenticated large screens 1`] = `
<Nav
  localeCode="en-US"
  media={Object {}}
  self={
    Object {
      "status": "prereg",
    }
  }
/>
`;

exports[`Nav should match the snapshot for unauthenticated medium screens 1`] = `
<Nav
  localeCode="en-US"
  media={Object {}}
  self={
    Object {
      "name": "Jeff Cleft",
      "status": "active",
    }
  }
/>
`;

exports[`Nav should match the snapshot for unauthenticated medium screens 2`] = `
<Nav
  localeCode="en-US"
  media={Object {}}
  self={
    Object {
      "status": "prereg",
    }
  }
/>
`;

exports[`Nav should match the snapshot for unauthenticated small screens 1`] = `
<Nav
  localeCode="en-US"
  media={Object {}}
  self={
    Object {
      "status": "prereg",
    }
  }
/>
`;
